Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-02-22 Kimmo
 BUG: [ 1664731 ] Margin and line numbers not separated
  Src/editlib: ccrystaltextview.cpp
 BUG: [ 1664727 ] Empty file compare looks broken
  Fix revision marks for scratchpads
  Src/editlib: ccrystaltextview.cpp
 BUG: [ 1664832 ] Typo Error in the Registry
  ShellExtension: WinMergeShell.rgs
 BUG: [ 1666559 ] Error on save option (WinMerge 2.7.1.7)
  Src: PropBackups.cpp

2007-02-21 Kimmo
 BUG: [ 1664727 ] Empty file compare looks broken
  Src/editlib: ccrystaltextview.cpp

2007-02-20 WinMerge experimental release 2.7.1.7 (SVN revision 4120)

2007-02-20 Kimmo
 PATCH: [ 1663798 ] Add option and menuitem for file compare selection margin
  Src: Merge.rc MergeEditView.cpp MergeEditView.h OptionsDef.h OptionsInit.cpp
   resource.h
  Src/editlib: ccrystaltextview.cpp
  Src/Languages/*: Merge*.rc
 Remove commented out lines
  Src: DiffWrapper.cpp

2007-02-19 Kimmo
 PATCH: [ 1663012 ] Fix total count for compare progress dialog
  Src: DirCompProgressDlg.cpp DirCompProgressDlg.h
 Bug: [ 1663197 ] s/inproper/improper [in Changes.txt]
  Src: Changes.txt
 PATCH: [ 1642876 ] Open manual for command line help
  Src: Merge.cpp Merge.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2007-02-17 Jan Hryz
 Czech translation - update
  Src/Languages/Czech/MergeCzech.rc

2007-02-17 Kimmo
 PATCH: [ 1662002 ] Use two threads for folder compare
  Src: Diffcontext.cpp Diffcontext.h DiffThread.cpp DiffThread.h DirScan.cpp
   DirScan.h

2007-02-14 Tim
 PATCH: [ 1640274 ] Icons for folder compare popup menu
  Src: MainFrm.cpp Merge.dsp Merge.rc resource.h
  Src/res new files: both.bmp left.bmp left_to_browse.bmp left_to_right.bmp
   move_left_to_browse.bmp move_right_to_browse.bmp right.bmp
   right_to_browse.bmp right_to_left.bmp
  Src/Languages/*: Merge*.rc

2007-02-14 Kimmo
 PATCH: [ 1659183 ] Add Vista security attributes to manifest files