@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-02-23 Kimmo
+ Cleanup WMGotoDlg constructor
+  Src: WMGotoDlg.cpp
+
 2007-02-22 Kimmo
  BUG: [ 1664731 ] Margin and line numbers not separated
   Src/editlib: ccrystaltextview.cpp
